--- a/.github/workflows/build_openssl3_android.yml
+++ b/.github/workflows/build_openssl3_android.yml
@@ -81,6 +81,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         merge-multiple: true
+        path: android-openssl3
 
     - name: Setup | Checksums
       run: for file in $(find ./ -name '*.so' ); do openssl dgst -sha256 -r "$file" | awk '{print $1}' > "${file}.sha256"; done
